--- a/src/scss/modules/Home/_Banner.scss
+++ b/src/scss/modules/Home/_Banner.scss
@@ -42,10 +42,12 @@
           color: var(--yellow-500);
           text-transform: uppercase;
           font-size: 2.75rem;
+          opacity: 0;
           margin-bottom: 3rem;
           position: relative;
           font-family: IntegralCF;
           font-weight: 700;
+          animation: bannerTitleShow 0.6s 0.2s forwards;
 
           @media (min-width: 1024px) {
             font-size: 3.5rem;
@@ -136,5 +138,15 @@
         }
       }
     }
+  }
+}
+
+@keyframes bannerTitleShow {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
