--- a/src/scss/modules/Home/_History.scss
+++ b/src/scss/modules/Home/_History.scss
@@ -15,9 +15,6 @@
 
   .title {
     display: grid;
-    @media (min-width: 1024px) {
-      grid-template-columns: 1fr 1fr;
-    }
 
     .start {
       display: flex;
@@ -61,10 +58,6 @@
         height: 380px;
       }
 
-      @media (min-width: 1024px) {
-        margin-top: -180px;
-      }
-
       &::after {
         content: '';
         display: block;
@@ -72,14 +65,9 @@
         inset: 0;
         position: absolute;
         z-index: -1;
-
-        @media (min-width: 1024px) {
-          clip-path: polygon(3% 3%, 100% 0, 100% 100%, 0% 100%);
-        }
       }
 
       @media (min-width: 1536px) {
-        margin-top: -250px;
         height: 480px;
       }
 
@@ -109,15 +97,25 @@
         }
       }
 
+      .start-slide {
+        display: block;
+        padding: 1rem 2rem;
+        border: transparent;
+        background: transparent;
+        border: 4px solid var(--beige-500);
+        color: var(--beige-500);
+        font-family: Gooper;
+        font-size: 1.25rem;
+        border-radius: 4px;
+        margin-inline: auto;
+        margin-top: 3rem;
+      }
+
       .cartoon {
         position: absolute;
         user-select: none;
-        pointer-events: none;
         display: none;
-
-        @media (min-width: 1024px) {
-          display: block;
-        }
+        pointer-events: none;
 
         &:last-of-type {
           right: 0;
@@ -159,6 +157,34 @@
         }
       }
     }
+
+    &:not(.mobile) {
+      @media (min-width: 1024px) {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      .filled {
+        @media (min-width: 1024px) {
+          margin-top: -180px;
+        }
+
+        @media (min-width: 1536px) {
+          margin-top: -250px;
+        }
+
+        .cartoon {
+          @media (min-width: 1024px) {
+            display: block;
+          }
+        }
+
+        &::after {
+          @media (min-width: 1024px) {
+            clip-path: polygon(3% 3%, 100% 0, 100% 100%, 0% 100%);
+          }
+        }
+      }
+    }
   }
 
   .timeline {
@@ -193,13 +219,22 @@
       }
 
       .timeline-item {
+        opacity: 0;
+        transform: translateY(-1rem);
+        transition: all 0.6s;
+
+        &[data-show='true'] {
+          opacity: 1;
+          transform: translateY(0);
+        }
+
         & + .timeline-item {
-          padding-top: 10rem;
+          padding-top: 5rem;
         }
 
         .timeline-item-container {
           display: flex;
-          gap: 3rem;
+          gap: 5rem;
 
           .header {
             .indicator {
@@ -239,6 +274,7 @@
             p {
               font-size: 1.25rem;
               line-height: 1.4;
+              color: var(--black);
 
               & + p {
                 margin-top: 1rem;
