--- a/src/scss/modules/Home/_History.scss
+++ b/src/scss/modules/Home/_History.scss
@@ -19,28 +19,25 @@
     .start {
       display: flex;
       justify-content: center;
+      align-items: center;
       order: 1;
+      padding-block: 2rem;
+
+      p {
+        max-width: 90%;
+        line-height: 1.4;
+        color: var(--black);
+        font-weight: 700;
+        text-align: center;
+
+        @media (min-width: 1024px) {
+          font-size: 1.25rem;
+          text-align: left;
+        }
+      }
 
       @media (min-width: 1024px) {
         order: initial;
-      }
-
-      strong {
-        display: block;
-        color: var(--red-500);
-        font-style: italic;
-        font-family: IntegralCF;
-        margin-top: 3rem;
-        font-size: 3.5rem;
-
-        @media (min-width: 1024px) {
-          margin-top: 2rem;
-          font-size: 5rem;
-        }
-
-        @media (min-width: 1536px) {
-          font-size: 6rem;
-        }
       }
     }
 
@@ -117,7 +114,7 @@
         display: none;
         pointer-events: none;
 
-        &:last-of-type {
+        &.big {
           right: 0;
 
           @media (min-width: 1024px) {
@@ -136,7 +133,7 @@
           }
         }
 
-        &:first-of-type {
+        &.small {
           @media (min-width: 1024px) {
             left: -135px;
             bottom: -50px;
@@ -189,7 +186,27 @@
 
   .timeline {
     height: 100%;
-    margin-top: 10rem;
+    margin-top: 5rem;
+
+    & > strong {
+      display: block;
+      text-align: center;
+      margin-bottom: 5rem;
+      color: var(--red-500);
+      font-style: italic;
+      font-family: IntegralCF;
+      margin-top: 3rem;
+      font-size: 3.5rem;
+
+      @media (min-width: 1024px) {
+        margin-top: 2rem;
+        font-size: 5rem;
+      }
+
+      @media (min-width: 1536px) {
+        font-size: 6rem;
+      }
+    }
 
     .container {
       max-width: 1536px;
@@ -197,9 +214,6 @@
       padding-inline: 1rem;
       height: 100%;
       position: relative;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 1.5rem;
 
       @media (min-width: 1024px) {
         padding-inline: 2rem;
@@ -222,14 +236,61 @@
         opacity: 0;
         transform: translateY(-1rem);
         transition: all 0.6s;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1.5rem;
+
+        &:nth-child(1) {
+          padding-top: 100px;
+        }
+
+        &:nth-child(odd) {
+          .timeline-item-container {
+            grid-column: 1;
+
+            .header {
+              order: 1;
+
+              strong {
+                margin-right: 2rem;
+              }
+
+              .indicator {
+                margin-left: auto;
+
+                &:after {
+                  left: 0;
+                  right: auto;
+                  transform: translate(calc(-100% + 10px), -50%);
+                }
+              }
+            }
+          }
+        }
+
+        &:nth-child(even) {
+          .timeline-item-container {
+            grid-column: 2;
+
+            .header {
+              margin-right: auto;
+
+              strong {
+                margin-left: 2rem;
+              }
+            }
+
+            .content {
+              p {
+                text-align: right;
+              }
+            }
+          }
+        }
 
         &[data-show='true'] {
           opacity: 1;
           transform: translateY(0);
-        }
-
-        & + .timeline-item {
-          padding-top: 5rem;
         }
 
         .timeline-item-container {
@@ -268,13 +329,18 @@
 
           .content {
             img {
+              width: 100%;
               margin-bottom: 2rem;
+              margin-top: -100px;
             }
 
             p {
-              font-size: 1.25rem;
               line-height: 1.4;
               color: var(--black);
+
+              @media (min-width: 1024px) {
+                font-size: 1.25rem;
+              }
 
               & + p {
                 margin-top: 1rem;
@@ -283,61 +349,25 @@
           }
         }
       }
+    }
+  }
 
-      .left {
-        .timeline-item {
-          &:nth-child(1) {
-            padding-top: 5rem;
-          }
-        }
+  .end {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
 
-        .timeline-item-container {
-          grid-column: 1;
+    .dots {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
 
-          .header {
-            order: 1;
-
-            strong {
-              margin-right: 2rem;
-            }
-
-            .indicator {
-              margin-left: auto;
-
-              &:after {
-                left: 0;
-                right: auto;
-                transform: translate(calc(-100% + 10px), -50%);
-              }
-            }
-          }
-        }
-      }
-
-      .right {
-        .timeline-item {
-          &:nth-child(1) {
-            padding-top: 15rem;
-          }
-        }
-
-        .timeline-item-container {
-          grid-column: 2;
-
-          .header {
-            margin-right: auto;
-
-            strong {
-              margin-left: 2rem;
-            }
-          }
-
-          .content {
-            p {
-              text-align: right;
-            }
-          }
-        }
+      span {
+        display: block;
+        width: 1.5rem;
+        height: 1.5rem;
+        background: var(--yellow-500);
+        border-radius: 50%;
       }
     }
   }
