--- a/src/scss/modules/Home/_History.scss
+++ b/src/scss/modules/Home/_History.scss
@@ -1,9 +1,20 @@
 #historia {
   background: var(--beige-500);
 
+  [data-animate] {
+    opacity: 0;
+    transform: translateY(-1rem);
+    transition: all 0.6s;
+
+    &[data-show='true'] {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
   .background {
     min-height: 320px;
-    background: url(../../src/img/history-banner.webp);
+    background: url(../../public/img/history-banner.webp);
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -223,7 +234,7 @@
         content: '';
         display: block;
         width: 1.5rem;
-        height: 100%;
+        height: calc(100% - 100px);
         border-radius: 2rem;
         background: var(--red-500);
         position: absolute;
@@ -233,9 +244,6 @@
       }
 
       .timeline-item {
-        opacity: 0;
-        transform: translateY(-1rem);
-        transition: all 0.6s;
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 1.5rem;
@@ -286,11 +294,6 @@
               }
             }
           }
-        }
-
-        &[data-show='true'] {
-          opacity: 1;
-          transform: translateY(0);
         }
 
         .timeline-item-container {
@@ -354,8 +357,40 @@
 
   .end {
     display: flex;
-    justify-content: center;
-    margin-top: 1rem;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -68px;
+
+    .last-arrow {
+      display: flex;
+      align-items: flex-end;
+      transform: translateX(calc(-50% + 1rem));
+      margin-top: 2rem;
+      gap: 3rem;
+
+      .year {
+        background: url(../../public/img/rounded-year.svg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        padding-inline: 4rem;
+        padding-block: 1rem;
+        margin-bottom: 1rem;
+
+        strong {
+          display: block;
+          font-size: 2.5rem;
+          color: var(--red-500);
+          font-family: Gooper;
+        }
+      }
+
+      img {
+        max-width: 250px;
+        user-select: none;
+        pointer-events: none;
+      }
+    }
 
     .dots {
       display: flex;
@@ -368,6 +403,49 @@
         height: 1.5rem;
         background: var(--yellow-500);
         border-radius: 50%;
+      }
+    }
+  }
+
+  .last-item {
+    max-width: 1536px;
+    margin-inline: auto;
+    padding-inline: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.5rem;
+
+    @media (min-width: 1024px) {
+      padding-inline: 2rem;
+    }
+
+    .timeline-item {
+      .header {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+      }
+
+      .content {
+        margin-top: 3rem;
+
+        img {
+          width: 100%;
+          margin-bottom: 2rem;
+        }
+
+        p {
+          line-height: 1.4;
+          color: var(--black);
+
+          @media (min-width: 1024px) {
+            font-size: 1.25rem;
+          }
+
+          & + p {
+            margin-top: 1rem;
+          }
+        }
       }
     }
   }
