--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,3 +6,7 @@
 
 @use './modules/Home/Banner';
 @use './modules/Home/History';
+@use './modules/Home/Benefits';
+@use './modules/Home/Products';
+
+@use './modules/footer';
