--- a/src/scss/modules/_fonts.scss
+++ b/src/scss/modules/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: GooperRegular;
+  font-family: Gooper;
   font-weight: 400;
   src: url('../fonts/GooperRegular.woff2') format('woff2');
   font-display: swap;
