--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -33,7 +33,7 @@ header {
       }
     }
 
-    [data-menu='close'] {
+    [data-menu='open'] {
       background: transparent;
       border: 0;
       color: var(--beige-500);
