--- a/src/scss/modules/Home/_Benefits.scss
+++ b/src/scss/modules/Home/_Benefits.scss
@@ -1,10 +1,10 @@
-#benefits {
+#vantagens {
   background-color: var(--yellow-500);
   margin-top: -1px;
   padding-block: 3rem;
 
   @media (min-width: 1024px) {
-    background-image: url(../../public/img/recipe.png);
+    background-image: url(../../public/img/webp/recipe.webp);
     background-repeat: no-repeat;
     background-position: bottom right;
     padding-block: 5rem 10rem;
