--- a/src/scss/modules/Home/_Products.scss
+++ b/src/scss/modules/Home/_Products.scss
@@ -1,13 +1,20 @@
+@use '../../utils/productsClip';
+
 #produtos {
+  background: var(--beige-500);
   .banner {
     height: 320px;
-    background: url(../../public/img/products-banner.png);
+    background: url(../../public/img/webp/products-banner.webp);
     background-size: cover;
     display: grid;
     place-items: center;
 
     @media (min-width: 1024px) {
       height: 480px;
+    }
+
+    @media (min-width: 2048px) {
+      min-height: 600px;
     }
 
     .title {
@@ -17,6 +24,7 @@
       place-items: center;
       clip-path: polygon(0 0, 100% 12%, 95% 95%, 0% 100%);
       padding-inline: 2rem 2.5rem;
+      max-height: 384px;
 
       @media (min-width: 768px) {
         height: 80%;
@@ -38,6 +46,159 @@
 
         @media (min-width: 1536px) {
           font-size: 5rem;
+        }
+      }
+    }
+  }
+
+  h3,
+  h4,
+  span {
+    &.orange {
+      color: var(--orange-500);
+    }
+
+    &.red {
+      color: var(--red-500);
+    }
+
+    &.black {
+      color: var(--black);
+    }
+  }
+
+  div {
+    &.orange {
+      background: var(--orange-500);
+    }
+
+    &.red {
+      background: var(--red-500);
+    }
+  }
+
+  .container {
+    max-width: 1536px;
+    margin-inline: auto;
+    padding-inline: 1rem;
+
+    @media (min-width: 1024px) {
+      padding-inline: 2rem;
+    }
+
+    .product-type {
+      padding-top: 5rem;
+
+      h3 {
+        font-size: 2rem;
+        text-align: center;
+        font-family: IntegralCF;
+
+        @media (min-width: 640px) {
+          font-size: 3rem;
+          text-align: left;
+        }
+
+        @media (min-width: 1024px) {
+          font-size: 3.5rem;
+        }
+      }
+
+      .slide {
+        margin-top: 3rem;
+        position: relative;
+
+        button {
+          position: absolute;
+          z-index: 100;
+          top: 50%;
+          transform: translateY(calc(-50% - 17px));
+          background: rgba($color: #222222, $alpha: 0.3);
+          box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+          border-radius: 50%;
+          width: 48px;
+          height: 48px;
+          display: grid;
+          place-items: center;
+
+          &.swiper-button-lock {
+            display: none;
+          }
+
+          @media (min-width: 768px) {
+            width: 64px;
+            height: 64px;
+
+            svg {
+              width: 48px;
+              height: 48px;
+            }
+          }
+
+          border: 0;
+
+          &[data-prev] {
+            left: 1rem;
+          }
+
+          &[data-next] {
+            right: 1rem;
+          }
+        }
+
+        .item-container {
+          .image {
+            position: relative;
+            overflow: hidden;
+            @extend %productsClip;
+
+            img {
+              aspect-ratio: 4 / 4;
+              object-fit: cover;
+              object-position: center;
+            }
+
+            .overlay {
+              position: absolute;
+              inset: 0;
+              opacity: 0;
+              display: flex;
+              flex-direction: column;
+              justify-content: flex-end;
+              transition: all 0.6s;
+              transform: translateY(2rem);
+
+              div {
+                padding: 1rem 2rem 2rem;
+
+                p {
+                  font-size: 1rem;
+                  font-family: Gooper;
+                  font-size: 0.875rem;
+                  line-height: 1.4;
+                  color: var(--white);
+                }
+              }
+            }
+
+            &:hover > .overlay {
+              opacity: 1;
+              transform: translate(0);
+            }
+          }
+
+          h4 {
+            font-family: Gooper;
+            font-size: 1.5rem;
+            text-align: center;
+            margin-top: 1rem;
+            padding-inline: 2rem;
+            height: 34px;
+
+            @media (min-width: 1024px) {
+              font-size: 1.75rem;
+            }
+          }
         }
       }
     }
