--- a/src/scss/modules/Home/_History.scss
+++ b/src/scss/modules/Home/_History.scss
@@ -14,13 +14,17 @@
 
   .banner {
     min-height: 320px;
-    background: url(../../public/img/history-banner.webp);
+    background: url(../../public/img/webp/history-banner.webp);
     background-size: cover;
     background-position: center;
     width: 100%;
 
     @media (min-width: 1024px) {
       min-height: 480px;
+    }
+
+    @media (min-width: 2048px) {
+      min-height: 600px;
     }
   }
 
@@ -66,6 +70,14 @@
         height: 380px;
       }
 
+      @media (min-width: 1536px) {
+        height: 480px;
+      }
+
+      @media (min-width: 2048px) {
+        min-height: 600px;
+      }
+
       &::after {
         content: '';
         display: block;
@@ -73,10 +85,6 @@
         inset: 0;
         position: absolute;
         z-index: -1;
-      }
-
-      @media (min-width: 1536px) {
-        height: 480px;
       }
 
       p {
@@ -371,7 +379,7 @@
       gap: 3rem;
 
       .year {
-        background: url(../../public/img/rounded-year.svg);
+        background: url(../../public/img/svg/rounded-year.svg);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
@@ -423,8 +431,6 @@
   }
 
   .last-item {
-    max-width: 1536px;
-    margin-inline: auto;
     padding-left: 1rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -436,6 +442,7 @@
 
     .timeline-item {
       padding-bottom: 5rem;
+      padding-left: calc((100vw - 1536px) / 2);
 
       .header {
         display: flex;
@@ -479,12 +486,12 @@
       padding-right: 50px;
       justify-self: end;
       gap: 5rem;
-      max-width: 90%;
+      max-width: 630px;
       position: relative;
 
       @media (min-width: 1024px) {
         padding-right: 100px;
-        max-width: 85%;
+        max-width: 630px;
       }
 
       p {
