--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,5 +8,7 @@
 @use './modules/Home/History';
 @use './modules/Home/Benefits';
 @use './modules/Home/Products';
+@use './modules/Home/Shop';
+@use './modules/Home/Contato';
 
 @use './modules/footer';
