--- a/src/scss/modules/Home/_Products.scss
+++ b/src/scss/modules/Home/_Products.scss
@@ -2,6 +2,8 @@
 
 #produtos {
   background: var(--beige-500);
+  padding-bottom: 5rem;
+
   .banner {
     height: 320px;
     background: url(../../public/img/webp/products-banner.webp);
