--- a/src/scss/modules/Home/_History.scss
+++ b/src/scss/modules/Home/_History.scss
@@ -517,6 +517,13 @@
         display: flex;
         gap: 1rem;
         margin-bottom: 1rem;
+
+        a {
+          transition: filter 0.6s;
+          &:hover {
+            filter: brightness(0.8);
+          }
+        }
       }
 
       &:after {
