--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -253,6 +253,221 @@ footer {
   }
 }
 
+.timeline-mobile {
+  background: var(--beige-500);
+  position: fixed;
+  inset: 0;
+  z-index: 999999;
+  display: none;
+
+  &[data-open='true'] {
+    display: block;
+    animation: showDown 0.6s forwards;
+  }
+
+  [data-timeline='close'] {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: transparent;
+    border: 0;
+  }
+
+  .slide {
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    height: calc(100% - 4rem);
+    padding-bottom: 2rem;
+    position: relative;
+
+    & > img {
+      position: absolute;
+      max-width: 100px;
+      bottom: 0.25rem;
+      right: 0;
+    }
+
+    strong {
+      display: block;
+      text-align: center;
+      color: var(--yellow-500);
+      font-family: Gooper;
+      font-size: 2rem;
+    }
+
+    .swiper {
+      width: 100vw;
+      flex: 1;
+    }
+
+    .swiper-slide {
+      &:nth-last-child(2) {
+        strong {
+          background: url(../../public/img/svg/rounded-year.svg);
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center;
+          padding-inline: 1rem;
+          padding-block: 1rem;
+          margin-bottom: 0.5rem;
+          max-width: 175px;
+          margin-inline: auto;
+        }
+      }
+    }
+
+    .end {
+      img {
+        margin-inline: auto;
+        max-width: 150px;
+      }
+
+      p {
+        color: var(--red-500);
+        font-family: Gooper;
+        font-weight: bold;
+        text-align: center;
+        font-size: 1.5rem;
+        margin-top: 3rem;
+      }
+
+      .social {
+        display: flex;
+        gap: 1rem;
+        justify-content: center;
+        margin-top: 2rem;
+
+        svg {
+          width: 48px;
+          height: 48px;
+        }
+      }
+    }
+
+    .content {
+      margin-top: 3rem;
+      padding-inline: 1.5rem 1rem;
+      position: relative;
+
+      img {
+        max-width: 300px;
+        margin-inline: auto;
+
+        @media (min-width: 640px) {
+          max-width: 400px;
+        }
+      }
+
+      p {
+        margin-top: 2rem;
+        line-height: 1.4;
+        font-family: Gooper;
+        color: var(--black);
+        max-width: 720px;
+        margin-inline: auto;
+      }
+    }
+
+    .controls {
+      display: flex;
+      gap: 2rem;
+      padding-inline: 1rem;
+
+      button {
+        background: transparent;
+        border: 0;
+      }
+    }
+  }
+}
+
+.popup {
+  position: fixed;
+  inset: 0;
+  z-index: 999;
+  place-items: center;
+  background: rgba($color: #000000, $alpha: 0.6);
+  display: none;
+  opacity: 0;
+
+  &[data-show='true'] {
+    display: grid;
+    animation: showDown 0.6s forwards;
+  }
+
+  button {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: transparent;
+    border: 0;
+    color: var(--white);
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+
+    svg {
+      width: 32px;
+      height: 32px;
+    }
+  }
+
+  .image {
+    position: relative;
+    img {
+      height: 85vh;
+      width: 95vw;
+      object-fit: contain;
+    }
+
+    span.wpcf7-not-valid-tip {
+      display: none !important;
+    }
+
+    .wpcf7-spinner {
+      display: none;
+    }
+
+    .wpcf7 {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 25%;
+      max-width: 200px;
+
+      input {
+        width: 100%;
+        height: 1.75rem;
+        border: 2px solid var(--black);
+        background: transparent;
+        padding-inline: 0.5rem;
+        font-size: 0.875rem;
+        margin-top: 0.25rem;
+        border-radius: 1.5rem;
+
+        &::placeholder {
+          color: var(--black);
+        }
+
+        @media (min-height: 800px) {
+          height: 2rem;
+          border-radius: 2rem;
+        }
+
+        &[type='submit'] {
+          background: var(--red-500);
+          color: var(--white);
+          cursor: pointer;
+          border: 0;
+        }
+      }
+    }
+  }
+}
+
 @keyframes showDown {
   from {
     opacity: 0;
