--- a/src/scss/modules/Home/_Resale.scss
+++ b/src/scss/modules/Home/_Resale.scss
@@ -81,11 +81,11 @@
         display: flex;
         width: 100%;
         gap: 2rem;
-        align-items: center;
         margin-top: 1rem;
         flex-direction: column;
 
         @media (min-width: 640px) {
+          align-items: center;
           flex-direction: row;
           margin-top: 2rem;
         }
@@ -99,7 +99,6 @@
       }
 
       input[type='submit'] {
-        margin-left: auto;
         border: 0;
         background: var(--red-500);
         color: var(--beige-500);
@@ -110,6 +109,10 @@
         border-radius: 0.25rem;
         cursor: pointer;
         transition: filter 0.6s;
+
+        @media (min-width: 640px) {
+          margin-left: auto;
+        }
 
         &:hover {
           filter: brightness(0.8);
@@ -144,6 +147,56 @@
 
       .wpcf7-form-control-wrap {
         font-family: Montserrat, sans-serif;
+      }
+    }
+
+    .wpp {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      justify-content: center;
+      align-items: center;
+
+      @media (min-width: 768px) {
+        margin-top: 3rem;
+      }
+
+      strong {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        font-size: 1.25rem;
+        text-transform: uppercase;
+        font-family: Gooper;
+        color: rgba($color: #222222, $alpha: 0.6);
+
+        &::after {
+          content: '';
+          display: block;
+          width: 12px;
+          height: 3px;
+          background: rgba($color: #222222, $alpha: 0.6);
+        }
+
+        &::before {
+          content: '';
+          display: block;
+          width: 12px;
+          height: 3px;
+          background: rgba($color: #222222, $alpha: 0.6);
+        }
+      }
+
+      a {
+        border-radius: 4.5rem;
+        background: linear-gradient(to right, #01a651 0%, #8bc53f 100%);
+        color: white;
+        font-family: IntegralCF;
+        height: 4.5rem;
+        padding-inline: 2rem;
+        font-size: 1.25rem;
+        display: grid;
+        place-items: center;
       }
     }
   }
