--- a/src/scss/modules/Home/_Shop.scss
+++ b/src/scss/modules/Home/_Shop.scss
@@ -168,32 +168,17 @@
           }
         }
 
-        .wpp {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          gap: 3rem;
-          margin-top: 3rem;
+        .shop-image {
+          height: 320px;
 
-          a {
-            border-radius: 4.5rem;
-            background: linear-gradient(to right, #01a651 0%, #8bc53f 100%);
-            color: white;
-            font-family: IntegralCF;
-            height: 4.5rem;
-            padding-inline: 2rem;
-            font-size: 1.25rem;
-            display: grid;
-            place-items: center;
+          @media (min-width: 1024px) {
+            height: calc(100% - 480px);
           }
 
           img {
-            max-width: 250px;
-
-            @media (min-width: 768px) {
-              max-width: 350px;
-            }
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
           }
         }
       }
@@ -269,6 +254,35 @@
               }
             }
           }
+        }
+      }
+    }
+
+    .wpp {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 3rem;
+      margin-top: 3rem;
+
+      a {
+        border-radius: 4.5rem;
+        background: linear-gradient(to right, #01a651 0%, #8bc53f 100%);
+        color: white;
+        font-family: IntegralCF;
+        height: 4.5rem;
+        padding-inline: 2rem;
+        font-size: 1.25rem;
+        display: grid;
+        place-items: center;
+      }
+
+      img {
+        max-width: 250px;
+
+        @media (min-width: 768px) {
+          max-width: 350px;
         }
       }
     }
