--- a/src/scss/modules/Home/_Resale.scss
+++ b/src/scss/modules/Home/_Resale.scss
@@ -1,4 +1,4 @@
-#revenda {
+#home #revenda {
   background: var(--beige-500);
   padding-bottom: 5rem;
 
@@ -98,17 +98,24 @@
         margin-top: 0.25rem;
       }
 
-      input[type='submit'] {
+      button[type='submit'] {
         border: 0;
         background: var(--red-500);
         color: var(--beige-500);
         font-family: Gooper;
         font-weight: bold;
         font-size: 1.25rem;
-        padding: 1rem;
+        height: 3rem;
+        width: 150px;
         border-radius: 0.25rem;
         cursor: pointer;
+        display: grid;
+        place-items: center;
         transition: filter 0.6s;
+
+        svg {
+          animation: spin 0.6s linear infinite;
+        }
 
         @media (min-width: 640px) {
           margin-left: auto;
@@ -199,5 +206,15 @@
         place-items: center;
       }
     }
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
   }
 }
