--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -398,7 +398,7 @@ footer {
     animation: showDown 0.6s forwards;
   }
 
-  button {
+  button:not([type='submit']) {
     position: absolute;
     top: 1rem;
     right: 1rem;
@@ -446,6 +446,22 @@ footer {
         bottom: 150px;
       }
 
+      [type='submit'] {
+        background: var(--red-500);
+        width: 100%;
+        margin-top: 0.25rem;
+        height: 1.5rem;
+        border-radius: 1.5rem;
+        color: var(--white);
+        cursor: pointer;
+        border: 0;
+
+        svg {
+          height: 90%;
+          animation: spin 0.6s linear infinite;
+        }
+      }
+
       input {
         width: 100%;
         height: 1.75rem;
@@ -458,13 +474,6 @@ footer {
 
         &::placeholder {
           color: var(--black);
-        }
-
-        &[type='submit'] {
-          background: var(--red-500);
-          color: var(--white);
-          cursor: pointer;
-          border: 0;
         }
       }
     }
@@ -480,5 +489,15 @@ footer {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
   }
 }
