--- a/src/scss/modules/Home/_Resale.scss
+++ b/src/scss/modules/Home/_Resale.scss
@@ -112,13 +112,14 @@
         display: grid;
         place-items: center;
         transition: filter 0.6s;
+        margin-inline: auto;
+
+        @media (min-width: 640px) {
+          margin-right: 0;
+        }
 
         svg {
           animation: spin 0.6s linear infinite;
-        }
-
-        @media (min-width: 640px) {
-          margin-left: auto;
         }
 
         &:hover {
@@ -163,10 +164,7 @@
       gap: 2rem;
       justify-content: center;
       align-items: center;
-
-      @media (min-width: 768px) {
-        margin-top: 3rem;
-      }
+      margin-top: 2rem;
 
       strong {
         display: flex;
