--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -387,7 +387,7 @@ footer {
 .popup {
   position: fixed;
   inset: 0;
-  z-index: 999;
+  z-index: 999999999999999;
   place-items: center;
   background: rgba($color: #000000, $alpha: 0.6);
   display: none;
