--- a/src/scss/modules/Home/_Shop.scss
+++ b/src/scss/modules/Home/_Shop.scss
@@ -136,7 +136,8 @@
             clip-path: polygon(0 0, 100% 15%, 100% 100%, 0% 100%);
           }
 
-          a {
+          a,
+          span {
             display: flex;
             gap: 0.5rem;
             font-family: Gooper;
@@ -297,13 +298,19 @@
         display: grid;
         place-items: center;
       }
+    }
+  }
 
-      img {
-        max-width: 250px;
+  .bike-cartoon {
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
 
-        @media (min-width: 768px) {
-          max-width: 350px;
-        }
+    img {
+      max-width: 250px;
+
+      @media (min-width: 768px) {
+        max-width: 350px;
       }
     }
   }
